k8s/deployment-api.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: todoapi
  labels:
    app: todoapi
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: todoapi
  template:
    metadata:
      labels:
        app: todoapi
    spec:
      containers:
      - name: todoapi
        image: sunilsahu0123/todoapi: $BUILD_NUMBER $BUILD_NUMBER $BUILD_NUMBER $BUILD_NUMBER $BUILD_NUMBER $BUILD_NUMBER $BUILD_NUMBER $BUILD_NUMBER $BUILD_NUMBER $BUILD_NUMBER
        ports:
        - containerPort: 8080
