k8s/service-api.yml
apiVersion: v1
kind: Service
metadata:
  name: todoapi
spec:
  selector:
    app: todoapi
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
