k8s/service-ui.yml
apiVersion: v1
kind: Service
metadata:
  name: todoui
spec:
  selector:
    app: todoui
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
