k8s/ingress-api.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todoapi
spec:
  ingressClassName: nginx
  rules:
  - host: todo-app
    http: 
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: todoapi
            port:
              number: 8080
